hard-gists/4716919/run.log
=== Docker Run Log for 4716919 ===
Started at: Mi 29. Okt 14:58:06 CET 2025

[2025-10-29 14:58:06] START: Running container for 4716919
[2025-10-29 14:58:07] SUCCESS: Container 20cb451d6999da9318427e93c7a9d8785b8a9f02b0ac7fb240ec3b534aed1e27 started for 4716919
=== Container logs for 4716919 ===
  File "/snippet.py", line 26
    print 'Will compress {0} images'.format(i)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4716919 ===
[2025-10-29 14:58:09] INFO: Container 20cb451d6999da9318427e93c7a9d8785b8a9f02b0ac7fb240ec3b534aed1e27 has stopped
